@@ -1,6 +1,32 @@
 #ifndef _RDUP_H
 #define _RDUP_H
 
+#include <glib.h>
+
+#include "config.h"
+
+#include <stdio.h>
+#include <stdlib.h>
+#include <stdarg.h>
+#include <unistd.h>
+#include <string.h>
+#include <ctype.h>
+#include <pwd.h>
+#include <grp.h>
+#include <time.h>
+#include <glob.h>
+#include <fcntl.h>
+#include <signal.h>
+#include <dirent.h>
+#include <libgen.h>
+#include <syslog.h>
+#include <errno.h>
+#include <regex.h>
+#include <utime.h>
+#include <sys/stat.h>
+#include <sys/types.h>
+#include <sys/wait.h>
+
 #define VERSION     "@PACKAGE_VERSION@"
 #define PROGNAME    "@PACKAGE_NAME@"
 
