@@ -1,10 +1,17 @@
-18 Jan 2005: 0.1.3 Miek <miek@miek.nl>
+   Jan 2006: 0.2.0 Miek <miek@miek.nl>
+   * jumped to version 0.2.0, almost ready for 1.0.0
+   * ported to FreeBSD 
+   * reworked autoconf, autoREconf && ./configure && make
+     can now be used.
+
+
+18 Jan 2006: 0.1.3 Miek <miek@miek.nl>
    * hist.sh updated, it goes back for 3 months now
    * yesterday.sh now works correctly 
    * mirror.sh/rmirror.sh now create suffixes for backup
      files based on their creation time. The suffix 
      used is +MONTHDAY.HH.MM.
-
+     `
 
 06 Jan 2005: 0.1.2 Miek <miek@miek.nl>
    * All scripts were completely reworked, local
